Fixed #128 Rollover on mobile devices

--- a/style.css
+++ b/style.css
@@ -1921,6 +1921,22 @@ width: -webkit-calc(100% / 4);
 	opacity: 1;
 	bottom: -50px;
 }
+.cbp-rfgrid li.cbp-rfgrid-open a .project-info {
+	filter: alpha(opacity=100);
+	opacity: 1;
+}
+.cbp-rfgrid-tr {
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	margin-bottom: 0;
+	z-index: 9;
+}
+.cbp-rfgrid li.cbp-rfgrid-open a .project-info .project-details {
+	top: 0;
+	opacity: 1;
+}
 /* media queries:  change number of items per row */
 @media screen and (max-width: 1190px) {
 	.cbp-rfgrid li {
@@ -2193,6 +2209,19 @@ width: -webkit-calc(100% / 4);
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 	filter: alpha(opacity=100);
 	opacity: 1;
+}
+.team-member.team-member-open .details {
+	display: block;
+	top: 0;
+	background: #333;
+	color: white;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+	filter: alpha(opacity=100);
+	opacity: 1;
+	-webkit-transition: none;
+	-moz-transition: none;
+	-o-transition: none;
+	transition: none;
 }
 .team-member .profile-pic {
 	border-radius: 50%;
